--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@babel/plugin-proposal-export-namespace-from": "^7.18.9",
 		"@digital-art-dealers/react-native-component-lib": "^1.0.13",
 		"@react-native-async-storage/async-storage": "^1.17.10",
+		"@react-native-community/picker": "^1.8.1",
 		"@react-navigation/bottom-tabs": "^6.3.2",
 		"@react-navigation/drawer": "^6.4.4",
 		"@react-navigation/native": "^6.0.11",
@@ -33,11 +34,14 @@
 		"nativewind": "^2.0.10",
 		"react": "18.0.0",
 		"react-native": "0.69.4",
+		"react-native-bouncy-checkbox": "^3.0.5",
 		"react-native-gesture-handler": "^2.6.0",
 		"react-native-keyboard-aware-scroll-view": "^0.9.5",
+		"react-native-picker-select": "^8.0.4",
 		"react-native-reanimated": "^2.10.0",
 		"react-native-safe-area-context": "^4.3.3",
 		"react-native-screens": "^3.16.0",
+		"react-native-uuid": "^2.0.1",
 		"react-native-vector-icons": "^9.2.0",
 		"react-redux": "^8.0.2",
 		"redux-persist": "^6.0.0",
